--- a/client/kaart/index.html
+++ b/client/kaart/index.html
@@ -5,25 +5,63 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Homepage</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <header>
-    <span id="logo">BurenBond</span>
-    <nav>
+    <nav class="nav-bar">
+        <span id="logo"><span class="logoLetter">B</span>uren<span class="logoLetter">B</span>ond</span>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Nieuws en evenmenten</a></li>
-            <li><a href="">Onze gemeenschap</a></li>
-            <li><a href="">Kaart</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="../nieuws-en-evenementen/">Nieuws en evenmenten</a></li>
+            <li><a href="../onze-gemeenschap/">Onze gemeenschap</a></li>
+            <li><a href="#">Kaart</a></li>
         </ul>
         <button>
-            <svg></svg>
+            <img src="../assets/login.svg" alt="Login svg">
             Login
         </button>
     </nav>
 </header>
-<main></main>
+<main>
+    <h1>Kaart</h1>
+    <section class="container">
+        <img src="../assets/wielrenners.jpg" alt="">
+    </section>
+    <section class="container">
+        <h2>Festibuurt: Het Buurtfeest van het Jaar!:</h2>
+        <p>Welkom bij Festibuurt, hét jaarlijkse buurtfeest dat de levendige geest van onze gemeenschap viert! Elk jaar
+            komen buurtbewoners samen voor een dag vol plezier, activiteiten en verbondenheid. Festibuurt is niet zomaar
+            een evenement; het is een viering van onze diversiteit, onze geschiedenis en onze gedeelde band als
+            buren.</p>
+        <span>Wat maakt Festibuurt zo speciaal?</span>
+        <p>Festibuurt brengt de hele buurt samen voor een onvergetelijke dag vol festiviteiten. Van kleurrijke kraampjes
+            met lokaal eten en ambachtelijke producten tot opwindende optredens van lokale artiesten, er is voor elk wat
+            wils. Kinderen kunnen zich vermaken in het speciale kinderzone met spellen, knutselactiviteiten en zelfs een
+            opblaasbaar springkasteel!</p>
+        <span>Wat kun je verwachten op Festibuurt?</span>
+        <p>Live Muziek en Optredens: Geniet van een scala aan muzikale talenten uit onze buurt, van bands tot
+            soloartiesten, die het podium betreden om je te vermaken met hun melodieën en ritmes.
+            Lokale Kunst en Ambachten: Ontdek de creativiteit van onze buurtbewoners met een verscheidenheid aan kunst-
+            en ambachtelijke kraampjes, waar je unieke handgemaakte items kunt vinden om mee naar huis te nemen.
+            Culinair Genot: Proef de smaken van de buurt met een selectie van heerlijke gerechten en lekkernijen van
+            lokale restaurants, foodtrucks en bakkerijen.
+            Interactieve Activiteiten: Doe mee aan verschillende leuke en interactieve activiteiten, zoals workshops,
+            danslessen, spelletjes en nog veel meer!
+        </p>
+        <span>Hoe kun je deelnemen aan Festibuurt?</span>
+        <p>Festibuurt staat open voor alle buurtbewoners, jong en oud. Het evenement is gratis toegankelijk, dus nodig
+            gerust je familie, vrienden en buren uit om samen deel te nemen aan deze feestelijke viering. Vergeet niet
+            om je enthousiasme en goede vibes mee te nemen, want Festibuurt draait om het creëren van blijvende
+            herinneringen en het versterken van onze band als gemeenschap.
+            Dus markeer je kalender en sluit je aan bij ons voor een dag vol plezier, vreugde en verbondenheid op
+            Festibuurt!</p>
+        <img src="../assets/festival.jpg" alt="">
+    </section>
+
+
+</main>
 <footer>
     <nav>
         <ul>
