--- a/client/nieuws-en-evenementen/index.html
+++ b/client/nieuws-en-evenementen/index.html
@@ -5,53 +5,181 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Homepage</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../main.js"></script>
 </head>
 <body>
 <header>
-    <span id="logo">BurenBond</span>
-    <nav>
+    <nav class="nav-bar">
+        <span id="logo"><span class="logoLetter">B</span>uren<span class="logoLetter">B</span>ond</span>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Nieuws en evenmenten</a></li>
-            <li><a href="">Onze gemeenschap</a></li>
-            <li><a href="">Kaart</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="nieuws-en-evenementen/">Nieuws en evenmenten</a></li>
+            <li><a href="../onze-gemeenschap/">Onze gemeenschap</a></li>
+            <li><a href="../kaart/">Kaart</a></li>
         </ul>
         <button>
-            <svg></svg>
+            <img src="../assets/login.svg" alt="Login svg">
             Login
         </button>
     </nav>
 </header>
 <main>
     <h1>Nieuws en evenementen</h1>
-    <section>
-        <h2></h2>
+    <section class="container">
+        <h2>Nieuws en evenementen</h2>
+        <section>
+            <h3>Buurtbewoners woedend over nieuw circulatieplan</h3>
+            <p>In het hart van de stad groeit onvrede over het recente circulatieplan. Ooit rustige straten zijn nu
+                bronnen van frustratie. Het plan, zonder overleg ingevoerd, zorgt voor chaos. Bewoners eisen
+                inspraak en verandering. De druk op de autoriteiten neemt toe terwijl de buurtbewoners vastberaden
+                blijven strijden voor een leefbare omgeving.
+            </p>
+            <!--                <a href="">Lees meer...</a>-->
+        </section>
+        <section>
+            <h3>Project Zorgzame Buren komt naar onze buurt!</h3>
+            <p>Een opwindend nieuws verspreidt zich door onze buurt: het Project Zorgzame Buren komt eraan! Dit
+                initiatief brengt buurtbewoners samen in een netwerk van ondersteuning en solidariteit. Met hulp van
+                Weliswaar.be hebben we toegang tot informatie en middelen om onze zorgzame gemeenschap te
+                versterken. Samen bouwen we aan een buurt waarin niemand achterblijft en waar solidariteit ons
+                dagelijks leven vormt.</p>
+            <!--                <a href="">Lees meer...</a>-->
+        </section>
+    </section>
 
-        <h3></h3>
-        <p></p>
-        <h3></h3>
-        <p></p>
+    <section class="container aankomende-evenementen">
+        <h2>Aankomende evenementen</h2>
+        <section>
+            <div>
+                <h3>Lokale fietstocht</h3>
+                <p>Pak je fiets en doe mee met onze lokale fietstocht! Ontdek de charmes van onze buurt terwijl je samen
+                    met
+                    je buren fietst. Doe mee op 20/05/2024 te Kalve 37, Wachtbeke en ontdek waarom deze fietstocht een
+                    must
+                    is voor alle fietsliefhebbers!</p>
+                <button>Ga naar ></button>
+            </div>
+            <div>
+                <span>Datum</span>
+                <span>Locatie</span>
+            </div>
+
+            <img src="../assets/wielrenners.jpg" alt="">
+        </section>
+        <section>
+            <div>
+                <h3>Lokale fietstocht</h3>
+                <p>Pak je fiets en doe mee met onze lokale fietstocht! Ontdek de charmes van onze buurt terwijl je samen
+                    met
+                    je buren fietst. Doe mee op 20/05/2024 te Kalve 37, Wachtbeke en ontdek waarom deze fietstocht een
+                    must
+                    is voor alle fietsliefhebbers!</p>
+                <button>Ga naar ></button>
+            </div>
+            <div>
+                <span>Datum</span>
+                <span>Locatie</span>
+            </div>
+
+            <img src="../assets/wielrenners.jpg" alt="">
+        </section>
+        <section>
+            <div>
+                <h3>Lokale fietstocht</h3>
+                <p>Pak je fiets en doe mee met onze lokale fietstocht! Ontdek de charmes van onze buurt terwijl je samen
+                    met
+                    je buren fietst. Doe mee op 20/05/2024 te Kalve 37, Wachtbeke en ontdek waarom deze fietstocht een
+                    must
+                    is voor alle fietsliefhebbers!</p>
+                <button>Ga naar ></button>
+            </div>
+            <div>
+                <span>Datum</span>
+                <span>Locatie</span>
+            </div>
+
+            <img src="../assets/wielrenners.jpg" alt="">
+        </section>
     </section>
-    <section>
-        <h2></h2>
+    <section class="container">
+        <h2>Evenementen</h2>
         <section>
-            <h3></h3>
-            <p></p>
-            <button></button>
+            <form id="myForm" class="search-filter" action="#" novalidate>
+                <div class="errorSummary"
+                     role="group"
+                     aria-labelledby="errorSummary-heading"
+                     tabindex="-1">
+                    <h2 id="errorSummary-heading">Er is een probleem</h2>
+                    <ul></ul>
+                </div>
+                <div>
+                    <label for="Zoek">
+                        <span class="field-label">Zoek</span>
+                        <!-- <span class="field-hint">Voornaam</span> -->
+                        <!-- <span class="field-error">Voornaam is verplicht</span> -->
+                    </label>
+                    <input type="text"
+                           name="Zoek"
+                           id="zoek"
+                           placeholder="Zoek"
+                           autofocus
+                           tabindex="0">
+                </div>
+                <div>
+                    <label for="date">
+                        <span class="field-label">Datum</span>
+                        <!-- <span class="field-hint">E-mail</span> -->
+                        <!-- <span class="field-error">E-mail is verplicht</span> -->
+                    </label>
+                    <input type="date"
+                           name="date"
+                           id="date"
+                           placeholder="Datum"
+                           required>
+                </div>
+                <div>
+                    <label for="genre">
+                        <span class="field-label">Genre</span>
+                        <!-- <span class="field-hint">Naam</span> -->
+                        <!-- <span class="field-error">Naam is verplicht</span> -->
+
+                    </label>
+                    <input type="text"
+                           name="genre"
+                           id="genre"
+                           placeholder="Genre"
+                           onkeyup="myFunction()"
+                           required>
+                    <ul id="genreUL">
+                        <li><a href="#">Genre 1</a></li>
+                        <li><a href="#">Genre 1</a></li>
+                        <li><a href="#">Genre 1</a></li>
+                        <li><a href="#">Genre 1</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <button type="submit">Verstuur</button>
+                </div>
+            </form>
+
+            <section class="aankomende-evenementen">
+                <div>
+                    <h3>Festibuurt</h3>
+                    <p>Festibuurt is terug en beter dan ooit! Het is tijd om je buren te ontmoeten, plezier te hebben en
+                        herinneringen te maken op dit jaarlijkse buurtfeest. Van live muziek tot lekker eten en leuke
+                        activiteiten voor het hele gezin, Festibuurt heeft voor elk wat wils. Kom en vier met ons mee op
+                        22/05/2024 te Molenhoek 23, Wachtebeke en ontdek waarom Festibuurt het hoogtepunt van het jaar
+                        is!</p>
+                    <button>Ga naar ></button>
+                </div>
+                <img src="../assets/festival.jpg" alt="">
+            </section>
+
         </section>
-        <section>
-            <h3></h3>
-            <p></p>
-            <button></button>
-        </section>
-        <section>
-            <h3></h3>
-            <p></p>
-            <button></button>
-        </section>
-    </section>
-    <section>
+
 
     </section>
 </main>
@@ -65,5 +193,29 @@
         </ul>
     </nav>
 </footer>
+
+<script>
+    function myFunction() {
+        // Declare variables
+        let input, filter, ul, li, a, i, txtValue;
+        input = document.querySelector('#genre');
+        filter = input.value.toUpperCase();
+        ul = document.querySelector("#genreUL");
+        li = ul.getElementsByTagName('li');
+        ul.style.display = 'block';
+
+        // Loop through all list items, and hide those who don't match the search query
+        for (i = 0; i < li.length; i++) {
+            a = li[i].getElementsByTagName("a")[0];
+            txtValue = a.textContent || a.innerText;
+            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                li[i].style.display = "";
+            } else {
+                li[i].style.display = "none";
+            }
+        }
+    }
+</script>
+
 </body>
 </html>
