--- a/client/onze-gemeenschap/index.html
+++ b/client/onze-gemeenschap/index.html
@@ -5,20 +5,21 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Homepage</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <header>
-    <span id="logo">BurenBond</span>
-    <nav>
+    <nav class="nav-bar">
+        <span id="logo"><span class="logoLetter">B</span>uren<span class="logoLetter">B</span>ond</span>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Nieuws en evenmenten</a></li>
-            <li><a href="">Onze gemeenschap</a></li>
-            <li><a href="">Kaart</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="../nieuws-en-evenementen/">Nieuws en evenmenten</a></li>
+            <li><a href="#">Onze gemeenschap</a></li>
+            <li><a href="../kaart/">Kaart</a></li>
         </ul>
         <button>
-            <svg></svg>
+            <img src="../assets/login.svg" alt="Login svg">
             Login
         </button>
     </nav>
@@ -26,6 +27,64 @@
 <main>
     <section>
         <h1>Berichten</h1>
+        <form id="searchFilter" class="search-filter" action="#" novalidate>
+            <div class="errorSummary"
+                 role="group"
+                 aria-labelledby="errorSummary-heading"
+                 tabindex="-1">
+                <h2 id="errorSummary-heading">Er is een probleem</h2>
+                <ul></ul>
+            </div>
+            <div>
+                <label for="Zoek">
+                    <span class="field-label">Zoek</span>
+                    <!-- <span class="field-hint">Voornaam</span> -->
+                    <!-- <span class="field-error">Voornaam is verplicht</span> -->
+                </label>
+                <input type="text"
+                       name="Zoek"
+                       id="zoek"
+                       placeholder="Zoek"
+                       autofocus
+                       tabindex="0">
+            </div>
+            <div>
+                <label for="date">
+                    <span class="field-label">Datum</span>
+                    <!-- <span class="field-hint">E-mail</span> -->
+                    <!-- <span class="field-error">E-mail is verplicht</span> -->
+                </label>
+                <input type="date"
+                       name="date"
+                       id="date"
+                       placeholder="Datum"
+                       required>
+            </div>
+            <div>
+                <label for="genre">
+                    <span class="field-label">Genre</span>
+                    <!-- <span class="field-hint">Naam</span> -->
+                    <!-- <span class="field-error">Naam is verplicht</span> -->
+
+                </label>
+                <input type="text"
+                       name="genre"
+                       id="genre"
+                       placeholder="Genre"
+                       onkeyup="myFunction()"
+                       required>
+                <ul id="genreUL">
+                    <li><a href="#">Genre 1</a></li>
+                    <li><a href="#">Genre 1</a></li>
+                    <li><a href="#">Genre 1</a></li>
+                    <li><a href="#">Genre 1</a></li>
+                </ul>
+            </div>
+
+            <div>
+                <button type="submit">Verstuur</button>
+            </div>
+        </form>
         <div>
             <h3>Groen in de buurt</h3>
             <p>Hey medeburen, recentelijk zijn ik en een aantal buren begonnen met onze straat op te fleuren. We hebben
@@ -49,9 +108,88 @@
         </div>
         <button>Toon meer</button>
     </section>
-    <section>
-        <h2>Laat een bericht achter</h2>
-        <form></form>
+    <section class="container laat-bericht-achter">
+        <form id="myForm" action="#" novalidate>
+            <h2>Laat een bericht achter</h2>
+            <div class="errorSummary"
+                 role="group"
+                 aria-labelledby="errorSummary-heading"
+                 tabindex="-1">
+                <h2 id="errorSummary-heading">Er is een probleem</h2>
+                <ul></ul>
+            </div>
+            <div>
+                <label for="firstname">
+                    <span class="field-label">Voornaam</span>
+                    <!-- <span class="field-hint">Voornaam</span> -->
+                    <!-- <span class="field-error">Voornaam is verplicht</span> -->
+                </label>
+                <input type="text"
+                       name="firstname"
+                       id="firstname"
+                       autocomplete="given-name"
+                       placeholder="Voornaam"
+                       required
+                       autofocus
+                       tabindex="0">
+            </div>
+
+            <div>
+                <label for="name">
+                    <span class="field-label">Naam</span>
+                    <!-- <span class="field-hint">Naam</span> -->
+                    <!-- <span class="field-error">Naam is verplicht</span> -->
+
+                </label>
+                <input type="text"
+                       name="name"
+                       id="name"
+                       autocomplete="family-name"
+                       placeholder="Naam"
+                       required>
+            </div>
+            <div>
+                <label for="email">
+                    <span class="field-label">E-mail</span>
+                    <!-- <span class="field-hint">E-mail</span> -->
+                    <!-- <span class="field-error">E-mail is verplicht</span> -->
+                </label>
+                <input type="text"
+                       name="email"
+                       id="email"
+                       autocomplete="email"
+                       placeholder="E-mail"
+                       required>
+            </div>
+            <div>
+                <label for="message">
+                    <span class="field-label">Bericht</span>
+                    <!-- <span class="field-hint">Naam</span> -->
+                    <!-- <span class="field-error">Naam is verplicht</span> -->
+
+                </label>
+                <input type="text"
+                       name="message"
+                       id="message"
+                       placeholder="Bericht"
+                       required>
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox"
+                       id="privacy"
+                       name="privacy"
+                       required>
+                <label for="privacy">
+                    <span class="field-label">*Door dit aan te duiden ga je akkoord met de privacyverklaring.
+                        <abbr title="required">*</abbr>
+                    </span>
+                </label>
+            </div>
+            <div>
+                <button type="submit">Verstuur</button>
+            </div>
+        </form>
     </section>
     <section>
         <h2>Onze gemeenschap</h2>
@@ -60,7 +198,7 @@
             te leren kennen, buurtinitiatieven opzetten die de gemeenschap ten goede komen, inspirerende verhalen delen
             om elkaar te motiveren en lokale bedrijven ondersteunen om onze economie te stimuleren. Laten we samen
             bouwen aan een buurt waarin iedereen zich thuis voelt en waar we elkaar helpen groeien en gedijen.</p>
-        <img src="../images/" alt="Foto met inwoners van deze gemeenschap.">
+        <img src="../assets/gemeenschap.jpg" alt="Foto met inwoners van deze gemeenschap.">
     </section>
 
 </main>
