Delete & get message op ID, aanpassingen server, app, style etc

--- a/client/nieuws-en-evenementen/index.html
+++ b/client/nieuws-en-evenementen/index.html
@@ -106,7 +106,7 @@
     <section class="container">
         <h2>Evenementen</h2>
         <section>
-            <form id="myForm" class="search-filter" action="#" novalidate>
+            <form id="searchFilter" class="search-filter" action="#" novalidate>
                 <div class="errorSummary"
                      role="group"
                      aria-labelledby="errorSummary-heading"
