--- a/client/onze-gemeenschap/index.html
+++ b/client/onze-gemeenschap/index.html
@@ -28,89 +28,82 @@
 <main>
     <section>
         <h1>Berichten</h1>
-<!--        <form id="searchFilter" class="search-filter" action="#" novalidate>-->
-<!--            <div class="errorSummary"-->
-<!--                 role="group"-->
-<!--                 aria-labelledby="errorSummary-heading"-->
-<!--                 tabindex="-1">-->
-<!--                <h2 id="errorSummary-heading">Er is een probleem</h2>-->
-<!--                <ul></ul>-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <label for="Zoek">-->
-<!--                    <span class="field-label">Zoek</span>-->
-<!--                    &lt;!&ndash; <span class="field-hint">Voornaam</span> &ndash;&gt;-->
-<!--                    &lt;!&ndash; <span class="field-error">Voornaam is verplicht</span> &ndash;&gt;-->
-<!--                </label>-->
-<!--                <input type="text"-->
-<!--                       name="Zoek"-->
-<!--                       id="zoek"-->
-<!--                       placeholder="Zoek"-->
-<!--                       autofocus-->
-<!--                       tabindex="0">-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <label for="date">-->
-<!--                    <span class="field-label">Datum</span>-->
-<!--                    &lt;!&ndash; <span class="field-hint">E-mail</span> &ndash;&gt;-->
-<!--                    &lt;!&ndash; <span class="field-error">E-mail is verplicht</span> &ndash;&gt;-->
-<!--                </label>-->
-<!--                <input type="date"-->
-<!--                       name="date"-->
-<!--                       id="date"-->
-<!--                       placeholder="Datum"-->
-<!--                       required>-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <label for="genre">-->
-<!--                    <span class="field-label">Genre</span>-->
-<!--                    &lt;!&ndash; <span class="field-hint">Naam</span> &ndash;&gt;-->
-<!--                    &lt;!&ndash; <span class="field-error">Naam is verplicht</span> &ndash;&gt;-->
+                <form id="searchFilter" class="search-filter" action="#" novalidate>
+                    <div>
+                        <label for="search">
+                            <span class="field-label">Zoek</span>
+                            <!-- <span class="field-hint">Voornaam</span> -->
+                            <!-- <span class="field-error">Voornaam is verplicht</span> -->
+                        </label>
+                        <input type="text"
+                               name="search"
+                               id="search"
+                               placeholder="Zoek"
+                               autofocus
+                               tabindex="0">
+                    </div>
+                    <div>
+                        <label for="date">
+                            <span class="field-label">Datum</span>
+                            <!-- <span class="field-hint">E-mail</span> -->
+                            <!-- <span class="field-error">E-mail is verplicht</span> -->
+                        </label>
+                        <input type="date"
+                               name="date"
+                               id="date"
+                               placeholder="Datum"
+                               required>
+                    </div>
+                    <div>
+                        <label for="genre">
+                            <span class="field-label">Genre</span>
+                            <!-- <span class="field-hint">Naam</span> -->
+                            <!-- <span class="field-error">Naam is verplicht</span> -->
 
-<!--                </label>-->
-<!--                <input type="text"-->
-<!--                       name="genre"-->
-<!--                       id="genre"-->
-<!--                       placeholder="Genre"-->
-<!--                       onkeyup="myFunction()"-->
-<!--                       required>-->
-<!--                <ul id="genreUL">-->
-<!--                    <li><a href="#">Genre 1</a></li>-->
-<!--                    <li><a href="#">Genre 1</a></li>-->
-<!--                    <li><a href="#">Genre 1</a></li>-->
-<!--                    <li><a href="#">Genre 1</a></li>-->
-<!--                </ul>-->
-<!--            </div>-->
+                        </label>
+                        <input type="text"
+                               name="genre"
+                               id="genre"
+                               placeholder="Genre"
+                               onkeyup="myFunction()"
+                               required>
+                        <ul id="genreUL">
+                            <li><a href="#">Genre 1</a></li>
+                            <li><a href="#">Genre 1</a></li>
+                            <li><a href="#">Genre 1</a></li>
+                            <li><a href="#">Genre 1</a></li>
+                        </ul>
+                    </div>
 
-<!--            <div>-->
-<!--                <button type="submit">Verstuur</button>-->
-<!--            </div>-->
-<!--        </form>-->
-<!--        <div>-->
-<!--            <h3>Groen in de buurt</h3>-->
-<!--            <p>Hey medeburen, recentelijk zijn ik en een aantal buren begonnen met onze straat op te fleuren. We hebben-->
-<!--                al wat bomen, struiken en bloemen geplant en zijn nu bezig met een gemeenschappelijke moestuin op te-->
-<!--                zetten. Zijn er geïnteresseerden? Zet dan even een reactie.</p>-->
-<!--            <span>Gepost op 1/05/2024 door Sandra Bull</span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <h3>Groen in de buurt</h3>-->
-<!--            <p>Hey medeburen, recentelijk zijn ik en een aantal buren begonnen met onze straat op te fleuren. We hebben-->
-<!--                al wat bomen, struiken en bloemen geplant en zijn nu bezig met een gemeenschappelijke moestuin op te-->
-<!--                zetten. Zijn er geïnteresseerden? Zet dan even een reactie.</p>-->
-<!--            <span>Gepost op 1/05/2024 door Sandra Bull</span>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <h3>Groen in de buurt</h3>-->
-<!--            <p>Hey medeburen, recentelijk zijn ik en een aantal buren begonnen met onze straat op te fleuren. We hebben-->
-<!--                al wat bomen, struiken en bloemen geplant en zijn nu bezig met een gemeenschappelijke moestuin op te-->
-<!--                zetten. Zijn er geïnteresseerden? Zet dan even een reactie.</p>-->
-<!--            <span>Gepost op 1/05/2024 door Sandra Bull</span>-->
-<!--        </div>-->
-        <div id="messages">
+                    <div>
+                        <button id="searchBtn" type="submit">Zoek</button>
+                    </div>
+                </form>
+<!--                <div>-->
+<!--                    <h3>Groen in de buurt</h3>-->
+<!--                    <p>Hey medeburen, recentelijk zijn ik en een aantal buren begonnen met onze straat op te fleuren. We hebben-->
+<!--                        al wat bomen, struiken en bloemen geplant en zijn nu bezig met een gemeenschappelijke moestuin op te-->
+<!--                        zetten. Zijn er geïnteresseerden? Zet dan even een reactie.</p>-->
+<!--                    <span>Gepost op 1/05/2024 door Sandra Bull</span>-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    <h3>Groen in de buurt</h3>-->
+<!--                    <p>Hey medeburen, recentelijk zijn ik en een aantal buren begonnen met onze straat op te fleuren. We hebben-->
+<!--                        al wat bomen, struiken en bloemen geplant en zijn nu bezig met een gemeenschappelijke moestuin op te-->
+<!--                        zetten. Zijn er geïnteresseerden? Zet dan even een reactie.</p>-->
+<!--                    <span>Gepost op 1/05/2024 door Sandra Bull</span>-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    <h3>Groen in de buurt</h3>-->
+<!--                    <p>Hey medeburen, recentelijk zijn ik en een aantal buren begonnen met onze straat op te fleuren. We hebben-->
+<!--                        al wat bomen, struiken en bloemen geplant en zijn nu bezig met een gemeenschappelijke moestuin op te-->
+<!--                        zetten. Zijn er geïnteresseerden? Zet dan even een reactie.</p>-->
+<!--                    <span>Gepost op 1/05/2024 door Sandra Bull</span>-->
+<!--                </div>-->
+        <ul id="messages">
 
-        </div>
-        <button>Toon meer</button>
+        </ul>
+        <button id="showMore">Toon meer</button>
     </section>
     <section class="container laat-bericht-achter">
         <form id="myForm" action="#" novalidate>
@@ -195,16 +188,26 @@
             </div>
         </form>
     </section>
-    <section>
-        <h2>Onze gemeenschap</h2>
-        <p>"Onze gemeenschap" is de kern van wat we zijn. Het is waar mensen samenkomen, verbinden en samenwerken om een
-            sterke en ondersteunende omgeving te creëren. Hier kunnen we lokale evenementen organiseren om elkaar beter
-            te leren kennen, buurtinitiatieven opzetten die de gemeenschap ten goede komen, inspirerende verhalen delen
-            om elkaar te motiveren en lokale bedrijven ondersteunen om onze economie te stimuleren. Laten we samen
-            bouwen aan een buurt waarin iedereen zich thuis voelt en waar we elkaar helpen groeien en gedijen.</p>
-        <img src="../assets/gemeenschap.jpg" alt="Foto met inwoners van deze gemeenschap.">
-    </section>
+    <section class="container gemeenschap-section">
+        <div>
+            <h2>Ontdek onze gemeenschap</h2>
+            <p>"Onze gemeenschap" is de kern van wat we zijn. Het is waar mensen samenkomen, verbinden en
+                samenwerken om
+                een
+                sterke en ondersteunende omgeving te creëren. Hier kunnen we lokale evenementen organiseren om
+                elkaar
+                beter
+                te leren kennen, buurtinitiatieven opzetten die de gemeenschap ten goede komen, inspirerende
+                verhalen
+                delen
+                om elkaar te motiveren en lokale bedrijven ondersteunen om onze economie te stimuleren. Laten we
+                samen
+                bouwen aan een buurt waarin iedereen zich thuis voelt en waar we elkaar helpen groeien en
+                gedijen.</p>
+        </div>
+        <img src="../assets/gemeenschap.jpg" alt="foto van onze gemeenschap">
 
+    </section>
 </main>
 <footer>
     <nav>
