--- a/client/nieuws-en-evenementen/index.html
+++ b/client/nieuws-en-evenementen/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -7,22 +7,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homepage</title>
     <link rel="stylesheet" href="../css/style.css">
-    <script src="../main.js"></script>
+    <script type="module" src="../main.js"></script>
 </head>
 <body>
 <header>
+    <span id="logo"><span class="logoLetter">B</span>uren<span class="logoLetter">B</span>ond</span>
+    <button aria-expanded="false" class="hamburger" id="menu">
+                <span aria-hidden="true" class="icon">
+                    <span></span><span></span><span></span>
+                </span>
+        <span>Menu</span>
+    </button>
     <nav class="nav-bar">
-        <span id="logo"><span class="logoLetter">B</span>uren<span class="logoLetter">B</span>ond</span>
         <ul>
             <li><a href="../">Home</a></li>
-            <li><a href="nieuws-en-evenementen/">Nieuws en evenmenten</a></li>
+            <li><a href="../nieuws-en-evenementen/">Nieuws en evenmenten</a></li>
             <li><a href="../onze-gemeenschap/">Onze gemeenschap</a></li>
             <li><a href="../kaart/">Kaart</a></li>
         </ul>
-        <button>
+        <a id="login" href="../login/" class="fakeBtn">
             <img src="../assets/login.svg" alt="Login svg">
             Login
-        </button>
+        </a>
+
     </nav>
 </header>
 <main>
@@ -115,7 +122,7 @@
                     <ul></ul>
                 </div>
                 <div>
-                    <label for="Zoek">
+                    <label for="zoek">
                         <span class="field-label">Zoek</span>
                         <!-- <span class="field-hint">Voornaam</span> -->
                         <!-- <span class="field-error">Voornaam is verplicht</span> -->
@@ -136,7 +143,6 @@
                     <input type="date"
                            name="date"
                            id="date"
-                           placeholder="Datum"
                            required>
                 </div>
                 <div>
@@ -173,7 +179,7 @@
                         activiteiten voor het hele gezin, Festibuurt heeft voor elk wat wils. Kom en vier met ons mee op
                         22/05/2024 te Molenhoek 23, Wachtebeke en ontdek waarom Festibuurt het hoogtepunt van het jaar
                         is!</p>
-                    <button>Ga naar ></button>
+                    <a href="../kaart/" class="fakeBtn">Ga naar ></a>
                 </div>
                 <img src="../assets/festival.jpg" alt="">
             </section>
@@ -186,36 +192,12 @@
 <footer>
     <nav>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Nieuws en evenmenten</a></li>
-            <li><a href="">Onze gemeenschap</a></li>
-            <li><a href="">Kaart</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="../nieuws-en-evenementen/">Nieuws en evenmenten</a></li>
+            <li><a href="../onze-gemeenschap/">Onze gemeenschap</a></li>
+            <li><a href="../kaart/">Kaart</a></li>
         </ul>
     </nav>
 </footer>
-
-<script>
-    function myFunction() {
-        // Declare variables
-        let input, filter, ul, li, a, i, txtValue;
-        input = document.querySelector('#genre');
-        filter = input.value.toUpperCase();
-        ul = document.querySelector("#genreUL");
-        li = ul.getElementsByTagName('li');
-        ul.style.display = 'block';
-
-        // Loop through all list items, and hide those who don't match the search query
-        for (i = 0; i < li.length; i++) {
-            a = li[i].getElementsByTagName("a")[0];
-            txtValue = a.textContent || a.innerText;
-            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                li[i].style.display = "";
-            } else {
-                li[i].style.display = "none";
-            }
-        }
-    }
-</script>
-
 </body>
 </html>
